--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,85 @@
+/* body {
+  margin: 100px 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+} */
+
+body {
+  background: #22252e;
+}
+
+h1,
+h2,
+p {
+  margin-top: 200;
+}
+
 h1 {
   color: white;
-  font-family: "Playfair Display", serif;
-  font-weight: bold;
+  font-size: 96px;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+}
+
+h2 {
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-weight: normal;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: normal;
 }
 
 .hero {
-  background: #22252e;
-  text-align: right;
+  text-align: center;
+  padding: 220px 20px;
   color: white;
 }
 
 .hero .btn-branding {
-  background: #3a43ad;
-  border-radius: 4px;
+  background: black;
+  border-radius: 0%;
   color: white;
-  font-size: 18px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
   line-height: 27px;
   padding: 15px 30px;
+  border-color: white;
+}
+
+.name {
+  background: white;
+  color: #22252e;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1400px) {
+  h1 {
+    font-size: 78px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  h1 {
+    font-size: 56px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  h1 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 576px) {
+  h1 {
+    font-size: 40px;
+  }
+  .name {
+    background: #22252e;
+    color: white;
+  }
 }
