--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,12 @@
-/* body {
-  margin: 100px 0;
-}
-
-h1,
-h2,
-h3 {
-  margin: 0;
-} */
-
 body {
   background: #22252e;
 }
 
-h1,
+/* h1,
 h2,
 p {
   margin-top: 200;
-}
+} */
 
 h1 {
   color: white;
@@ -32,8 +22,14 @@ h2 {
 }
 
 p {
+  font-size: 16px;
   font-family: "Inter", sans-serif;
   font-weight: normal;
+  color: white;
+}
+
+.mug {
+  margin: 90px 0px 220px;
 }
 
 .hero {
@@ -59,6 +55,35 @@ p {
   color: #22252e;
 }
 
+.project-title {
+  text-align: center;
+  font-size: 64px;
+  margin-bottom: 40px;
+  font-weight: 700;
+}
+
+#project-1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-launch-button {
+  background: #64664c;
+  border-radius: 0%;
+  color: white;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  line-height: 27px;
+  padding: 15px 30px;
+  border-color: white;
+}
+
+.project-description {
+  line-height: 30px;
+}
+
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
   h1 {
     font-size: 78px;
@@ -81,5 +106,8 @@ p {
   .name {
     background: #22252e;
     color: white;
+  }
+  .mug {
+    margin: 90px 0px -155px;
   }
 }
