--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ p {
     font-size: 78px;
   }
 }
+/* @media (max-width: 1200) {
+    .project-description {
+      font-size: 40px;
+    }
+  } */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   h1 {
     font-size: 56px;
