--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,16 @@ p {
 
 .project-description {
   line-height: 30px;
+  text-align: center;
+}
+
+@media (max-width: 1200) {
+  .project-title {
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 40px;
+    font-weight: 700;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
@@ -89,11 +99,6 @@ p {
     font-size: 78px;
   }
 }
-/* @media (max-width: 1200) {
-    .project-description {
-      font-size: 40px;
-    }
-  } */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   h1 {
     font-size: 56px;
@@ -106,7 +111,7 @@ p {
 }
 @media (max-width: 576px) {
   h1 {
-    font-size: 40px;
+    font-size: 33px;
   }
   .name {
     background: #22252e;
