--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 :root {
   --branding-color: white;
-  --secondary-color: #64664c;
+  --secondary-color: #22252e;
   --tertiary-color: black;
+  --quaternary-color: #64664c;
   --heading-font-family: "Inter", sans-serif;
   --default-font-family: Arial, Helvetica, sans-serif;
 }
@@ -77,7 +78,7 @@ p {
 }
 
 .btn-launch-button {
-  background: var(--secondary-color);
+  background: var(--quaternary-color);
   border-radius: 0%;
   color: var(--branding-color);
   font-size: 20px;
