--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ p {
 }
 
 .project-header-font {
+  font-size: 45px;
   font-weight: 700;
 }
 
@@ -113,6 +114,7 @@ p {
 }
 
 .about-header-font {
+  font-size: 45px;
   font-weight: 700;
 }
 
