--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 h2 {
-  color: #a39690;
+  color: var(--quinary-color);
   font-weight: 700;
 }
 
@@ -92,7 +92,7 @@ p {
 
 .project-title {
   text-align: center;
-  font-size: 60px;
+  font-size: 44px;
   margin-bottom: 40px;
   font-weight: 700;
 }
