--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h3 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: normal;
 }
 
@@ -82,7 +82,7 @@ p {
 }
 
 #project-header {
-  padding: 0px 20px 100px;
+  padding: 0px 20px 75px;
 }
 
 .project-header-font {
@@ -119,8 +119,9 @@ p {
   text-align: center;
 }
 
-#about-header {
-  padding: 75px 20px 100px;
+#about-header,
+#epilogue-header {
+  padding: 75px 20px 75px;
 }
 
 .about-header-font {
@@ -131,10 +132,6 @@ p {
 .about-section {
   margin: 30px;
   padding: 160px 20px;
-}
-
-#epilogue-header {
-  padding: 75px 20px 60px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
