--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ p {
 }
 
 .mug {
-  margin: 90px 0px 220px;
+  margin: 90px 0px 0px;
 }
 
 .hero {
@@ -81,9 +81,9 @@ p {
   color: #22252e;
 }
 
-#project-header {
+/* #project-header {
   padding: 0px 20px 75px;
-}
+} */
 
 .project-header-font,
 .about-header-font {
@@ -120,15 +120,20 @@ p {
   text-align: center;
 }
 
+#project-header,
 #about-header,
 #epilogue-header {
-  padding: 75px 20px 75px;
+  padding: 200px 20px 75px;
 }
 
 .about-section {
   margin: 30px;
   padding: 160px 20px;
 }
+
+/* .green {
+  background: var(--quaternary-color);
+} */
 
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
   h1 {
