--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ footer .email-link {
   text-decoration: none;
   color: var(--quaternary-color);
   font-size: 24px;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 60px;
 }
@@ -184,6 +185,12 @@ footer .email-link:hover {
 
 footer .social-links a {
   color: var(--branding-color);
+  font-size: 30px;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: var(--quaternary-color);
 }
 
 /* .green {
