--- a/css/style.css
+++ b/css/style.css
@@ -161,10 +161,10 @@ p {
   padding: 200px 20px 75px;
 }
 
-.about-section {
+/* .about-section {
   margin: 30px;
   padding: 160px 20px;
-}
+} */
 
 footer {
   margin: 0 60px;
