--- a/css/style.css
+++ b/css/style.css
@@ -181,16 +181,26 @@ footer .email-link {
 
 footer .email-link:hover {
   color: var(--branding-color);
-}
-
-footer .social-links a {
-  color: var(--branding-color);
-  font-size: 30px;
   transition: all 100ms ease-in-out;
 }
 
+footer .social-links a {
+  line-height: 49px;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  border: 2px solid white;
+  color: var(--branding-color);
+  background-color: #6d6b6d;
+  /* padding: 10px 14px; */
+  font-size: 20px;
+  border-radius: 100%;
+}
+
 footer .social-links a:hover {
-  color: var(--quaternary-color);
+  color: var(--branding-color);
+  font-size: 30px;
+  transition: all 100ms ease-in-out;
 }
 
 /* .green {
