--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ footer .social-links a:hover {
     margin: 30px 0px -155px;
   }
   .hero {
-    padding: 200px 20px;
+    padding: 200px 20px 30px;
     color: var(--branding-color);
   }
 }
