--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,8 @@ p {
 }
 
 .project-header-font,
-.about-header-font {
+.about-header-font,
+.misc-header-font {
   font-size: 45px;
   font-weight: 700;
 }
@@ -296,8 +297,11 @@ footer .social-links a:hover {
   }
 }
 @media (max-width: 576px) {
+  nav {
+    font-size: 14px;
+  }
   h1 {
-    font-size: 33px;
+    font-size: 30px;
   }
   .name {
     background: #22252e;
@@ -310,18 +314,29 @@ footer .social-links a:hover {
     padding: 200px 20px 30px;
     color: var(--branding-color);
   }
+  .project-title {
+    font-size: 35px;
+    padding-top: 0px;
+  }
+
+  .about-section {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .about-header-font {
     font-size: 40px;
-    font-weight: 700;
   }
   #about-header {
     text-align: center;
+    padding-top: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
   #epilogue-header {
-    padding-top: 130px;
+    padding-top: 85px;
   }
   #contact-header,
   #project-header {
-    padding-top: 100px;
+    padding-top: 85px;
   }
 }
