--- a/css/style.css
+++ b/css/style.css
@@ -329,8 +329,8 @@ footer .social-links a:hover {
   #about-header {
     text-align: center;
     padding-top: 40px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   #epilogue-header {
     padding-top: 85px;
