--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ section {
   padding-top: 100px;
 }
 
+/* .hero-enchilada {
+  width: 100%;
+  height: 100vh;
+} */
+
 nav {
   padding: 0px 20px;
   display: flex;
@@ -223,11 +228,11 @@ footer .email-link {
   font-weight: 700;
   text-align: center;
   margin-bottom: 60px;
+  transition: all 0.2s;
 }
 
 footer .email-link:hover {
   color: var(--branding-color);
-  transition: all 100ms ease-in-out;
 }
 
 footer .social-links a {
@@ -235,17 +240,23 @@ footer .social-links a {
   text-align: center;
   width: 50px;
   height: 50px;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   color: var(--branding-color);
-  background-color: #6d6b6d;
-  font-size: 20px;
-  border-radius: 100%;
+  /* background-color: #6d6b6d; */
+  font-size: 37px;
+  /* border-radius: 100%; */
+  transition: all 0.2s;
 }
 
 footer .social-links a:hover {
   color: var(--branding-color);
-  font-size: 25px;
-  transition: all 100ms ease-in-out;
+  font-size: 42px;
+}
+
+.fa-brands,
+.fab {
+  position: relative;
+  top: -46px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
@@ -253,6 +264,7 @@ footer .social-links a:hover {
     font-size: 78px;
   }
 }
+
 @media (max-width: 1200px) {
   .project-title {
     font-size: 30px;
@@ -265,16 +277,19 @@ footer .social-links a:hover {
     padding: 95px 20px;
   }
 }
+
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   .hero {
     padding: 139px 20px;
   }
 }
+
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .btn-branding {
     margin-top: -32px;
   }
 }
+
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   h1 {
     font-size: 56px;
@@ -308,6 +323,7 @@ footer .social-links a:hover {
     padding: 0px 20px 50px;
   }
 }
+
 @media only screen and (min-width: 576px) and (max-width: 768px) {
   h1 {
     font-size: 40px;
@@ -319,21 +335,26 @@ footer .social-links a:hover {
     margin-top: -41px;
   }
 }
+
 @media (max-width: 576px) {
   h1 {
     font-size: 30px;
   }
+
   .name {
     background: #22252e;
     color: var(--branding-color);
   }
+
   .mug {
     margin: 30px 0px -155px;
   }
+
   .hero {
     padding: 200px 20px 30px;
     color: var(--branding-color);
   }
+
   .project-title {
     font-size: 35px;
     padding-top: 0px;
@@ -344,18 +365,22 @@ footer .social-links a:hover {
     padding-left: 10px;
     padding-right: 10px;
   }
+
   .about-header-font {
     font-size: 40px;
   }
+
   #about-header {
     text-align: center;
     padding-top: 40px;
     padding-left: 0px;
     padding-right: 0px;
   }
+
   #epilogue-header {
     padding-top: 85px;
   }
+
   #contact-header,
   #project-header {
     padding-top: 70px;
