Revert "Trying out full-screen hero"
This reverts commit ebeea991e40060fcef309331cbb5ef449663ff45.

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 }
 
 body {
-  margin: 0;
   background: var(--secondary-color);
+  margin: 0px 0px 100px;
   font-family: var(--heading-font-family);
 }
 
@@ -31,13 +31,8 @@ section {
   width: 100%;
 }
 
-.sticky + .hero-enchilada {
+.sticky + .hero {
   padding-top: 100px;
-}
-
-.hero {
-  width: 100vw;
-  height: 100vh;
 }
 
 /* .hero-enchilada {
@@ -87,7 +82,7 @@ nav li,
 h1,
 h3,
 p,
-.hero-enchilada,
+.hero,
 .btn-branding,
 .btn-launch-button {
   color: var(--branding-color);
@@ -122,12 +117,12 @@ p {
   margin: 90px 0px 0px;
 }
 
-.hero-enchilada {
+.hero {
   text-align: center;
   padding: 220px 20px;
 }
 
-.hero-enchilada .btn-branding {
+.hero .btn-branding {
   background: var(--tertiary-color);
   border-radius: 0%;
   font-size: 20px;
@@ -194,7 +189,7 @@ p {
   border-color: white;
 }
 
-.hero-enchilada .btn-branding:hover {
+.hero .btn-branding:hover {
   background-color: var(--quaternary-color);
 }
 
@@ -209,10 +204,7 @@ p {
   text-align: center;
 }
 
-#project-header {
-  padding: 0px 20px 75px;
-}
-
+#project-header,
 #about-header {
   padding: 45px 20px 75px;
 }
@@ -279,22 +271,22 @@ footer .social-links a:hover {
     margin-bottom: 40px;
   }
   #project-header {
-    padding: 0px 20px 75px;
+    padding: 60px 20px 75px;
   }
-  .hero-enchilada {
+  .hero {
     padding: 95px 20px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
-  .hero-enchilada {
+  .hero {
     padding: 139px 20px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .btn-branding {
-    margin-top: -2px;
+    margin-top: -32px;
   }
 }
 
@@ -302,11 +294,11 @@ footer .social-links a:hover {
   h1 {
     font-size: 56px;
   }
-  .hero-enchilada {
+  .hero {
     margin-top: -20px;
   }
   .btn-branding {
-    margin-top: -2px;
+    margin-top: -32px;
   }
 }
 
@@ -320,11 +312,6 @@ footer .social-links a:hover {
     padding: 0px 10px;
     justify-content: center;
     font-size: 14px;
-  }
-
-  .name {
-    background: #22252e;
-    color: var(--branding-color);
   }
 
   #about-header {
@@ -350,11 +337,11 @@ footer .social-links a:hover {
   h1 {
     font-size: 40px;
   }
-  .hero-enchilada {
+  .hero {
     padding: 73px 20px;
   }
   .btn-branding {
-    margin-top: -2px;
+    margin-top: -41px;
   }
 }
 
@@ -363,17 +350,18 @@ footer .social-links a:hover {
     font-size: 30px;
   }
 
+  .name {
+    background: #22252e;
+    color: var(--branding-color);
+  }
+
   .mug {
     margin: 30px 0px -155px;
   }
 
-  .hero-enchilada {
+  .hero {
     padding: 200px 20px 30px;
     color: var(--branding-color);
-  }
-
-  .btn-branding {
-    margin-top: -2px;
   }
 
   .project-title {
@@ -382,7 +370,7 @@ footer .social-links a:hover {
   }
 
   #project-header {
-    padding-top: 0px;
+    padding-top: 70px;
   }
 
   .about-section,
