--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,10 @@ footer .social-links a:hover {
     margin-top: -20px;
   }
 
+  .below-hero {
+    margin-bottom: 20px;
+  }
+
   .btn-branding {
     margin-top: -32px;
   }
@@ -330,10 +334,6 @@ footer .social-links a:hover {
     padding: 0px 10px;
     justify-content: center;
     font-size: 14px;
-  }
-
-  #about-header {
-    padding-top: 80px;
   }
 
   .about-section {
@@ -403,12 +403,5 @@ footer .social-links a:hover {
 
   .about-header-font {
     font-size: 38px;
-  }
-
-  #about-header {
-    text-align: center;
-    padding-top: 40px;
-    padding-left: 0px;
-    padding-right: 0px;
   }
 }
