--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ p {
 }
 
 #project-1:hover {
-  outline: 3px solid white;
+  outline: 7px solid #99816b;
 }
 
 .btn-launch-button {
@@ -261,7 +261,7 @@ footer .social-links a:hover {
 }
 
 .social-links {
-  margin-bottom: 84px;
+  margin-bottom: 50px;
 }
 
 .fa-brands,
