--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,17 @@ p {
   border-color: white;
 }
 
+.btn-launch-button:visited {
+  background: var(--quaternary-color);
+  border-radius: 0%;
+  font-size: 20px;
+  font-family: var(--default-font-family);
+  font-weight: 700;
+  line-height: 27px;
+  padding: 15px 30px;
+  border-color: white;
+}
+
 .hero .btn-branding:hover {
   background-color: var(--quaternary-color);
 }
