--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@
 }
 
 body {
-  background: var(--secondary-color);
   margin: 0;
+  animation: opening 1s ease-in-out;
+  background: var(--secondary-color);
   font-family: var(--heading-font-family);
 }
 
@@ -277,6 +278,15 @@ footer .social-links a:hover {
 .fab {
   position: relative;
   top: -46px;
+}
+
+@keyframes opening {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1400px) {
