--- a/css/style.css
+++ b/css/style.css
@@ -238,20 +238,6 @@ footer {
   margin: 0 60px;
 }
 
-footer .email-link {
-  text-decoration: none;
-  color: var(--quaternary-color);
-  font-size: 24px;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 60px;
-  transition: all 0.2s;
-}
-
-footer .email-link:hover {
-  color: var(--branding-color);
-}
-
 footer .social-links a {
   line-height: 49px;
   text-align: center;
@@ -271,21 +257,39 @@ footer .social-links a:hover {
   font-size: 42px;
 }
 
+footer .email-link {
+  text-decoration: none;
+  color: var(--quinary-color);
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+  margin: 15px 0px 0px;
+  transition: all 0.2s;
+}
+
+footer .email-link:hover {
+  color: var(--quaternary-color);
+}
+
 footer {
   margin-bottom: 50px;
 }
 
-.fa-brands,
+/* .fa-brands,
 .fa-solid,
 .fab {
   position: relative;
   top: -46px;
-}
+} */
 
 .fa-react {
   font-size: 24px;
   color: #61dbfb;
   top: 0px;
+}
+
+.fa-react:hover {
+  font-size: 26px;
 }
 
 @keyframes opening {
