--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ p {
 .project-title a {
   text-decoration: none;
   color: var(--branding-color);
+  transition: 0.2s ease-in-out;
 }
 
 .project-title a:hover {
@@ -181,6 +182,7 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  transition: 0.2s ease-in-out;
 }
 
 #project-1:hover {
@@ -283,6 +285,7 @@ footer {
 } */
 
 .fa-react {
+  transition: all 100ms ease-in-out;
   font-size: 24px;
   color: #61dbfb;
   top: 0px;
