--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ nav {
   padding: 0px 20px;
   display: flex;
   justify-content: space-between;
+  z-index: 1000;
   position: fixed;
   top: 0;
 }
@@ -180,6 +181,7 @@ p {
 
 #project-1 {
   display: block;
+  z-index: -2;
   margin-left: auto;
   margin-right: auto;
   transition: 0.2s ease-in-out;
