Change About Me header media query

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ footer {
     padding-right: 10px;
   }
 
-  .about-header-font {
+  /* .about-header-font {
     font-size: 33px;
-  }
+  } */
 }
