Update React link speed

--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,10 @@ footer {
   color: var(--quinary-color);
 }
 
+.fa-spin {
+  animation-duration: 3s;
+}
+
 /* .fa-react:hover {
   transition: 0.9s;
   transform: rotate(360deg);
